# zeroshotENGINE

./: .env  .gitignore  CITATION.cff  LICENSE.txt  README.md  prompt_structure.xlsx  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: HDZSC_Demo_Showcase.md  Overview_IDZSC_and_HDZSC.md  Overview_IZSC_and_HZSC.md  Performance_Evaluation.md  Tutorial_Get_Started.md  zeroshot_engine_full_documentation.md
src/zeroshot_engine/: __init__.py
src/zeroshot_engine.egg-info/: PKG-INFO  SOURCES.txt
src/zeroshot_engine/functions/: base.py  izsc.py
zeroshotENGINEvenv/: pyvenv.cfg
